# StylGen_v0

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  DEV_NOTES.md  Makefile  NOTES.md  README.md  RUNNING.md  e2e_demo.ipynb  linkedin_personalization_plan.md  pyproject.toml
examples/: curl-examples.sh
scripts/: e2e.py  e2e_local.sh
stylgen_v0/: main.py
stylgen_v0/core/: embeddings.py  llm.py  persona.py  pipeline.py  vector_store.py
stylgen_v0/models/: schemas.py
stylgen_v0/storage/: memory.py
tests/: test_api.py
