[project]
name = "stylgen_v0"
version = "0.1.0"
description = "Minimal FastAPI backend for personalized LinkedIn post generation with persona, retrieval, and generation pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Your Team"}]
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "numpy>=1.26",
]

[project.optional-dependencies]
hf-embeddings = [
  "sentence-transformers>=3.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "httpx>=0.27",
]

